# capra

./: .gitignore  ANALYSIS.md  CLAUDE.md  Dockerfile.gpu  EFFICIENCY_REPORT.md  PROMPTS.md  README.md  ecosystem.config.cjs  nixpacks.toml  package-lock.json  package.json  railway.json  techprep system design.docx  vassist.py  vercel.json
backend/: .env.example  .gitignore  nixpacks.toml  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  claude_service.py  openai_service.py
backend/scripts/: add-admin-subscription.js
backend/src/: index.js
backend/src/config/: database.js  index.js  stripe.js
backend/src/lib/: config.js  errors.js  logger.js  response.js  validators.js
backend/src/middleware/: authenticate.js  errorHandler.js  jwtAuth.js  rateLimiter.js  requestId.js  requestLogger.js  security.js  subscriptionRequired.js  unifiedAuth.js  validators.js
backend/src/routes/: analyze.js  ascend.js  ascendPrep.js  auth.js  billing.js  companyPreps.js  credits.js  device.js  diagram.js  extension.js  extract.js  fetch.js  fix.js  interview.js  interviewPrep.js  onboarding.js  run.js  solve.js  transcribe.js  usage.js  voice.js
backend/src/services/: ascendPrep.js  claude.js  creditService.js  deepgram.js  deviceLicenseService.js  diagram_engine.py  eraser.js  exportPrep.js  freeUsageService.js  interviewPrep.js  openai.js  problemCache.js  pythonDiagrams.js  redis.js  (+6 more)
(+228 files in other folders)
